--- a/README
+++ b/README
@@ -88,8 +88,7 @@ Main targets:
 
 ---[ Unit-Tests ]------------------------------------------------------------------
 Die Unit Tests basieren auf JUnit 4.x, teilweise benoetigen sie den JBoss Embedded
-Container. Derzeit sind die Unit-Tests aus Eclipse heraus lauffaehig, eine Inte-
-gration in das Ant-Buildfile fehlt noch.
+Container. 
 
 Der JBoss Embedded Container kann heruntergeladen werden unter
 http://downloads.sourceforge.net/jboss/jboss-EJB-3.0_Embeddable_ALPHA_9.zip
@@ -100,4 +99,8 @@ umfasst. Wird diese User-Library eingebunden in das Projekt, sind die EJB3 Libs
 aus der JBoss Distribution nicht mehr notwendig....
 
 Daneben muessen die JUnit 4.x Libraries eingebunden werden.
+
+Das entsprechende Ant-Target ist "junit"
+
+Damit das läuft, muss JUnit als Ant-Extension installiert sein.
 ---[ ENDE ]---------------------------------------------------------------------
