--- a/ticket2rock/src/de/ejb3buch/ticket2rock/applikation/resources/Message_en_US.properties
+++ b/ticket2rock/src/de/ejb3buch/ticket2rock/applikation/resources/Message_en_US.properties
@@ -1,10 +1,10 @@
-#  Ticket2Rock ist die Beispielanwendung des Buchs "EJB 3 professionell" (dpunkt).
+#  Ticket2Rock ist die Beispielanwendung des Buchs "EJB 3.1 professionell" (dpunkt).
 #  Es implementiert eine einfache Webanwendung zur Onlinebuchung von Tickets für
-#  Rockkonzerte auf Basis von EJB 3.0 und JavaServer Faces.
+#  Rockkonzerte auf Basis von EJB 3.1 und JavaServer Faces.
 #
 #  Copyright (C) 2006
 #  Jo Ehm, Dierk Harbeck, Stefan M. Heldt, Oliver Ihns, Jochen Jörg, Holger Koschek,
-#  Carsten Sahling, Roman Schloemmer
+#  Carsten Sahling, Roman Schloemmer, Norman Erck, Carl Anders Duevel, Daniel Steinhoefer
 #
 #  This program is free software; you can redistribute it and/or
 #  modify it under the terms of the GNU General Public License
