--- a/ticket2rock/README.rdoc
+++ b/ticket2rock/README.rdoc
@@ -2,14 +2,14 @@
 
 Ticket2Rock ist die Beispielanwendung des Buchs "EJB 3.1 professionell" (dpunkt).
 Es implementiert eine einfache Webanwendung zur Onlinebuchung von Tickets für Rockkonzerte auf Basis von EJB 3.1 und JavaServer Faces.
-Weitere Informationen zur Anwendung finden sich auf der [Seite zum Buch](http://ejb3buch.de).
+Weitere Informationen zur Anwendung finden sich auf der {Seite zum Buch}[http://ejb3buch.de].
 
 = Wie kann ich Ticket2Rock benutzen?
 
 == IDE
 
 Das Projekt kann mit Maven gebaut und gestartet werden und läßt sich in alle bekannten IDE's integrieren.
-Netbeans und IntelliJ bringen die Unterstützung von Haus aus mit. Unter Eclipse läßt sich diese per [Plugin](http://eclipse.org/m2e/) nachrüsten.
+Netbeans und IntelliJ bringen die Unterstützung von Haus aus mit. Unter Eclipse läßt sich diese per {Plugin}[http://eclipse.org/m2e/] nachrüsten.
 
 ==Maven
 Natürlich spricht auch nichts gegen die direkte Verwendung von Maven (am Besten in der Version 3).
@@ -31,7 +31,7 @@ Umlautfehler in der Anwendung enstehen dadurch, dass die import.sql Datei im Sta
 == Systemtests
 
 Statt einen embedded Containers wird für Integrationstests Arquillian verwendet.
-[Arquillian](http://www.jboss.org/arquillian) deployt Tests auf dem konfigurierten JavaEE-Container und führt diese aus.
+{Arquillian}[http://www.jboss.org/arquillian] deployt Tests auf dem konfigurierten JavaEE-Container und führt diese aus.
 Dieser Ansatz gefällt uns sehr gut, da er den Code auf der Plattform testet, auf der der Code später auch ausgeführt wird.
 
 == Lizenz
