--- a/ticket2rock/README.rdoc
+++ b/ticket2rock/README.rdoc
@@ -40,8 +40,11 @@ Um die Anwendung zu kompilieren und zu deployen müssen sie im Projektverzeichnis
 Wir haben die Anwendung mit JBoss 6.0.0 und JBoss 6.1.0 Final getestet.
 Im JBoss muss eine Queue namens 'queue/ticket2rock' eingerichtet sein, um die
 Stornierung der Ticketbestellung mittels JMS-Nachricht durchführen zu können.
-Dafür kopieren Sie einfach die im Projektverzeichnis vorhandene Konfigurationsdatei ticket2rock-hornetq-jms.xml in das
-deploy Verzeichnis der gewählten Serverkonfiguration (also z. Bsp.: $JBOSS_HOME/server/default/deploy).
+Dafür muss in der entsprechenden Konfigurationsdatei '$JBoss_HOME/server/default/deploy/hornetq/hornetq-jms.xml folgende Queue vermerkt werden:
+	
+	<queue name="ticket2rock">
+		<entry name="/queue/ticket2rock" />
+	</queue>
 
 = Probleme
 
