Stefan's Anregungen für README.

--- a/ticket2rock/README.rdoc
+++ b/ticket2rock/README.rdoc
@@ -21,7 +21,7 @@ Für Maven-Neulinge hier die wichtigsten Befehle in der Übersicht:
 
 Für die folgenden Befehle muss die Umgebungsvariable JBOSS_HOME gesetzt werden:
 
-* <tt>mvn integration-test</tt> startet die Integrationstests (Vorher sollte der JBoss gestartet werden)
+* <tt>mvn integration-test</tt> startet die Integrationstests (Vorher muss der JBoss gestartet werden)
 * <tt>mvn jboss:start</tt>  startet den JBoss.
 * <tt>mvn jboss:stop</tt>  stoppt den JBoss.
 * <tt>mvn jboss:hard-deploy</tt> deployt die Anwendung.
@@ -32,7 +32,7 @@ Für die folgenden Befehle muss die Umgebungsvariable JBOSS_HOME gesetzt werden:
 Um die Anwendung zu kompilieren und zu deployen müssen sie im Projektverzeichnis also diese Befehele ausführen:
 1. <tt>mvn package</tt>
 2. Unter Linux/Mac <tt>export JBOSS_HOME=/path/to/jboss-6.0.0.Final</tt> bzw. unter Windows <tt>set JBOSS_HOME=/path/to/jboss-6.0.0.Final</tt>
-3. Eine erforderliche Queue im JBoss installieren.
+3. Die erforderliche Queue im JBoss installieren (s.u.).
 3. <tt>mvn jboss:start</tt>
 4. <tt>mvn jboss:hard-deploy</tt>
 
